// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accepts \`disabled\` prop 1`] = `
.emotion-0 {
  padding: px;
  border: 1px solid;
  border-radius: 4px;
  font-size: px;
  font-weight: 500;
  line-height: 0;
  vertical-align: middle;
  cursor: pointer;
}

.emotion-0:active {
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
}

.emotion-0:disabled {
  background: lightgrey;
  color: #bbbbbb;
  cursor: not-allowed;
}

<button
  class="emotion-0"
  disabled=""
>
  button
</button>
`;

exports[`accepts \`theme\` prop 1`] = `
.emotion-0 {
  padding: px;
  border: 1px solid black;
  background: black;
  border-radius: 4px;
  font-size: px;
  font-weight: 500;
  color: white;
  fill: white;
  line-height: 0;
  vertical-align: middle;
  cursor: pointer;
}

.emotion-0:active {
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
  border-color: white;
  background: white;
  color: black;
}

.emotion-0:disabled {
  background: lightgrey;
  color: #bbbbbb;
  cursor: not-allowed;
}

<button
  class="emotion-0"
>
  button
</button>
`;

exports[`renders 1`] = `
.emotion-0 {
  padding: px;
  border: 1px solid;
  border-radius: 4px;
  font-size: px;
  font-weight: 500;
  line-height: 0;
  vertical-align: middle;
  cursor: pointer;
}

.emotion-0:active {
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
}

.emotion-0:disabled {
  background: lightgrey;
  color: #bbbbbb;
  cursor: not-allowed;
}

<button
  class="emotion-0"
>
  button
</button>
`;
